--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             crossorigin="anonymous">
     </head>
     <body class="bg-dark text-light mt-4">
+        <h2>Hello World</h2>
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mx-md-auto text-center">
